scripts/nullaway/annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8.txt
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/api/interpreter/GtpInterpreter.java:106: error: [NullAway] dereferenced expression board is @Nullable
		out.println(board.toRatingString(eval.getRating(), eval.getBestIndex()));
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/RowConstant.java:109: error: [NullAway] dereferenced expression coord is @Nullable
		sb.append(coord.name().toLowerCase());
		               ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/GameParser.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return size;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/prototype/logic/BddCachePrototype.java:27: error: [NullAway] dereferenced expression cache.get(key) is @Nullable
		return cache.get(key).id();
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/prototype/logic/BoardAnalizerPrototype.java:95: error: [NullAway] dereferenced expression getBDDCopy(p) is @Nullable
				return getBDDCopy(p).andWith(getBDDCopy(q));
				                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/prototype/board/BoardPrototype.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/prototype/board/BoardPrototype.java:55: error: [NullAway] method returns @Nullable, but superclass method com.strategy.api.board.Board.getField(com.strategy.util.RowConstant,java.lang.Integer) returns @NonNull
	public Field getField(RowConstant coord, Integer coordNumber) {
	             ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/prediction/PredictionHavannah.java:137: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/situation/SituationHavannah.java:31: error: [NullAway] initializer method does not guarantee @NonNull field win (line 27) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SituationHavannah(BoardAnalyzer analyzer, Board board,
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/BddCacheHavannah.java:44: error: [NullAway] method returns @Nullable, but superclass method com.strategy.api.logic.BddCache.restore(com.strategy.util.StoneColor,com.strategy.api.logic.Position,com.strategy.api.logic.Position,int) returns @NonNull
	public BDD restore(StoneColor color, Position p, Position q, int i) {
	           ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/BddCacheHavannah.java:67: error: [NullAway] method returns @Nullable, but superclass method com.strategy.api.logic.BddCache.store(com.strategy.util.StoneColor,com.strategy.api.logic.Position,com.strategy.api.logic.Position,int,net.sf.javabdd.BDD) returns @NonNull
	public BDD store(StoneColor color, Position p, Position q, int i, BDD bdd) {
	           ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/board/BoardHavannah.java:84: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return fields.get(key);
		^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/board/BoardHavannah.java:93: error: [NullAway] method returns @Nullable, but superclass method com.strategy.api.board.Board.getField(int) returns @NonNull
	public Field getField(int index) {
	             ^
    (see http://t.uber.com/nullaway )
../annotator/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/board/BoardHavannah.java:249: error: [NullAway] dereferenced expression coord is @Nullable
					sb.append(coord.name() + coordNumber + "  ");
					               ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
14 errors
